<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_card"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/normalLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_watch2"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white_light"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/box_stroke"
        app:boxStrokeWidth="1.5dp"
        app:hintTextColor="@color/accent"
        android:textColorHint="@color/accent"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:textCursorDrawable="@drawable/box_stroke_color"
            android:layout_width="match_parent"
            android:textColorHint="@color/accent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="@color/accent"
        app:cardElevation="1dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"
            />

    </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:id="@+id/loadingLay"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            app:lottie_autoPlay="true"
            android:id="@+id/loadingAnim"
            app:lottie_fileName="@string/loading_anim"
            app:lottie_loop="true"
            />

        <TextView
            android:id="@+id/loadingText"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loading_user"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/errorText"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_watch2"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        />

</LinearLayout>